[project]
name = "quant"
version = "0.1.0"
description = "backtesting & trading"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.8.0",
    "cachetools>=5.5.0",
    "ccxt>=4.4.7",
    "ipykernel>=6.29.5",
    "llama-cpp-python>=0.2.90",
    "matplotlib>=3.9.2",
    "mypy>=1.11.2",
    "networkx>=3.3",
    "numpy>=2.1.1",
    "orjson>=3.10.7",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.6.7",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "torch>=2.4.1",
    "uuid>=1.30",
    "uvloop>=0.20.0",
    "wasmtime>=25.0.0",
    "websockets>=13.1",
]
