[workspace]
resolver = "2"

members = [
"core",
"indicators/momentum",
"indicators/trend",
"indicators/volatility",
"indicators/volume",
"patterns/candlestick",
"price",
"strategies/base",
"strategies/trend_follow",
"strategies/stop_loss",
"strategies/signal",
"strategies/filter",
"strategies/shared",
"strategies/pulse",
"strategies/baseline"
]

[profile.release]
opt-level = 'z'
lto = true
panic = "abort"