[workspace]
resolver = "2"

members = [
"benches",
"core",
"indicators/momentum",
"indicators/trend",
"indicators/volatility",
"indicators/volume",
"patterns/candlestick",
"price",
"strategies/base",
"strategies/trend_follow",
"strategies/stop_loss",
"strategies/signal",
"strategies/confirm",
"strategies/pulse",
"strategies/baseline",
"strategies/indicator",
]

[workspace.package]
authors = ["Melnik <siarhei_melnik@proton.me>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/YieldLabs/quant"
version = "0.1.0"

[profile.release]
opt-level = 'z'
lto = true
panic = "abort"