[workspace]
resolver = "2"

members = [
"benches",
"core",
"timeseries",
"ffi",
"indicators/momentum",
"indicators/trend",
"indicators/volatility",
"indicators/volume",
"patterns/candlestick",
"patterns/osc",
"patterns/bands",
"patterns/channel",
"patterns/trail",
"price",
"strategies/base",
"strategies/trend_follow",
"strategies/signal",
"strategies/confirm",
"strategies/pulse",
"strategies/baseline",
"strategies/indicator",
"timeseries",
"ffi",
"patterns/osc",
]

[workspace.package]
authors = ["Melnik <siarhei_melnik@proton.me>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/YieldLabs/quant"
version = "0.1.0"

[profile.release]
opt-level = 3
lto = true
panic = "abort"