[package]
name = "timeseries"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


[dependencies]
core = { path = "../core" }
momentum = { path = "../indicators/momentum" }
volume = { path = "../indicators/volume" }
price = { path = "../price" }
volatility = { path = "../indicators/volatility" }
serde = { version = "1.0", default-features = false, features = ["derive"] }