[package]
name = "trend"
resolver = "2"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
core = { path = "../../core" }
price = { path = "../../price" }
volatility = { path = "../volatility" }
