[package]
name = "base"
resolver = "2"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
once_cell = "1.18"
core = { path = "../../core" }
price = { path = "../../price" }
volatility = { path = "../../indicators/volatility" }
