[package]
name = "baseline"
resolver = "2"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true


[dependencies]
base = { path = "../base" }
core = { path = "../../core" }
trend = { path = "../../indicators/trend" }
signal = { path = "../signal" }
indicator = { path = "../indicator" }