[package]
name = "confirm"
resolver = "2"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
base = { path = "../base" }
core = { path = "../../core" }
shared = { path = "../shared" }
momentum = { path = "../../indicators/momentum" }
trend = { path = "../../indicators/trend" }
volume = { path = "../../indicators/volume" }