[package]
name = "exit"
resolver = "2"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
base = { path = "../base" }
core = { path = "../../core" }
candlestick = { path = "../../patterns/candlestick" }
trend = { path = "../../indicators/trend" }
momentum = { path = "../../indicators/momentum" }
volume = {path = "../../indicators/volume" }
shared = { path = "../shared" }