[package]
name = "shared"
resolver = "2"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
trend = { path = "../../indicators/trend" }
momentum = { path = "../../indicators/momentum" }
candlestick = { path = "../../patterns/candlestick" }
core = { path = "../../core" }
base = { path = "../base" }
