[package]
name = "signal"
version = "0.1.0"
edition = "2021"


[dependencies]
core = { path = "../../core" }
base = { path = "../base" }
shared = { path = "../shared" }
trend = { path = "../../indicators/trend" }
momentum = { path = "../../indicators/momentum" }
volatility = { path = "../../indicators/volatility" }
