[package]
name = "signal"
resolver = "2"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true


[dependencies]
core = { path = "../../core" }
base = { path = "../base" }
shared = { path = "../shared" }
trend = { path = "../../indicators/trend" }
momentum = { path = "../../indicators/momentum" }
volatility = { path = "../../indicators/volatility" }
volume = { path = "../../indicators/volume" }
candlestick = { path = "../../patterns/candlestick" }