[package]
name = "stop_loss"
resolver = "2"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../../core" }
base = { path = "../base" }
volatility = { path = "../../indicators/volatility" }
