[package]
name = "stop_loss"
resolver = "2"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
core = { path = "../../core" }
base = { path = "../base" }
volatility = { path = "../../indicators/volatility" }
