[package]
name = "trend_follow"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../../core" }
base = { path = "../base" }
stop_loss = { path = "../stop_loss" }
signal = { path = "../signal" }
filter = { path = "../filter" }
pulse = { path = "../pulse" }
baseline = { path = "../baseline" }
shared = { path = "../shared" }
exit = { path = "../exit" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]
