[package]
name = "trend_follow"
resolver = "2"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
core = { path = "../../core" }
base = { path = "../base" }
stop_loss = { path = "../stop_loss" }
signal = { path = "../signal" }
filter = { path = "../filter" }
pulse = { path = "../pulse" }
baseline = { path = "../baseline" }
shared = { path = "../shared" }
exit = { path = "../exit" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]
