[package]
name = "trend_follow"
resolver = "2"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
core = { path = "../../core" }
timeseries = { path = "../../timeseries" }
base = { path = "../base" }
stop_loss = { path = "../stop_loss" }
signal = { path = "../signal" }
confirm = { path = "../confirm" }
pulse = { path = "../pulse" }
baseline = { path = "../baseline" }
indicator = { path = "../indicator" }
exit = { path = "../exit" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[lib]
crate-type = ["cdylib"]
