[package]
name = "stop_loss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../../../core" }
base = { path = "../../base" }
volatility = { path = "../../../indicators/volatility" }
